--- a/package.json
+++ b/package.json
@@ -1,53 +1,52 @@
 {
-  "name"             : "eslint-config-aleen42",
-  "description"      : "Javascript Standard Style - ESLint Shareable Config for aleen42",
-  "version"          : "1.0.0",
-  "author"           : [{
-    "name"  : "William Leung",
-    "email" : "williamleung2006@gmail.com"
-  }, {
-    "name"  : "Aleen",
-    "email" : "aleen42@vip.qq.com"
-  }],
-
-  "keywords"         : [
+  "name": "eslint-config-aleen42",
+  "description": "Javascript Standard Style - ESLint Shareable Config for aleen42",
+  "version": "1.0.1",
+  "author": {
+    "name": "William Leung",
+    "email": "williamleung2006@gmail.com"
+  },
+  "contributors": [
+    {
+      "name": "William Leung",
+      "email": "williamleung2006@gmail.com"
+    },
+    {
+      "name": "Aleen",
+      "email": "aleen42@vip.qq.com"
+    }
+  ],
+  "keywords": [
     "code linter",
     "code sytle",
     "code checker",
     "eslint"
   ],
-
-  "repository"       : {
-    "type" : "git",
-    "url"  : "https://github.com/aleen42/eslint-config-aleen42.git"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aleen42/eslint-config-aleen42.git"
   },
-
-  "license"          : "MIT",
-  "main"             : "config/standard.yaml",
-
-  "scripts"          : {
-    "test" : "eslint ."
+  "license": "MIT",
+  "main": "config/standard.yaml",
+  "scripts": {
+    "test": "eslint ."
   },
-
-  "peerDependencies" : {
-    "eslint" : "^4.16.0"
+  "peerDependencies": {
+    "eslint": "^4.16.0"
   },
-
-  "devDependencies"  : {
-    "eslint" : "~4.16.0"
+  "devDependencies": {
+    "eslint": "~4.16.0"
   },
-
-  "dependencies"     : {
-    "eslint-plugin-html"     : "~4.0.2",
-    "eslint-plugin-promise"  : "~3.6.0",
-    "eslint-plugin-import"   : "~2.8.0",
-    "eslint-plugin-node"     : "~5.2.1",
-    "eslint-plugin-standard" : "~3.0.1",
-    "eslint-config-standard" : "~10.2.1"
+  "dependencies": {
+    "eslint-plugin-html": "~4.0.2",
+    "eslint-plugin-promise": "~3.6.0",
+    "eslint-plugin-import": "~2.8.0",
+    "eslint-plugin-node": "~5.2.1",
+    "eslint-plugin-standard": "~3.0.1",
+    "eslint-config-standard": "~10.2.1"
   },
-
-  "eslintConfig"     : {
-    "root"    : true,
-    "extends" : "./config/standard.yaml"
+  "eslintConfig": {
+    "root": true,
+    "extends": "./config/standard.yaml"
   }
 }
