--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint": "~4.16.0"
   },
   "dependencies": {
+    "eslint-plugin-vue": "~5.1.0",
+    "eslint-plugin-react": "~7.12.4",
     "eslint-plugin-html": "~4.0.2",
     "eslint-plugin-promise": "~3.6.0",
     "eslint-plugin-import": "~2.8.0",
